--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  crypto: 2.1.5
   cupertino_icons: ^0.1.3
   image_picker: 0.6.3+1
   dio: 3.0.8
